--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,6 +11,8 @@ body {
   border: 2px solid black;
   box-shadow: black 8px 8px;
   align-content: center;
+  z-index: 5;
+  position: relative;
 }
 .titulo h1 {
   letter-spacing: 2px;
@@ -65,6 +67,7 @@ body {
 }
 .portafolio .item {
   width: 100%;
+  height: 100%;
   z-index: -5;
   display: flex;
   flex-wrap: wrap;
@@ -205,18 +208,18 @@ body {
 }
 
 #proyectos {
-  margin: 40px 20px;
   width: 100%;
   height: 100%;
   flex-wrap: wrap;
 }
 #proyectos .contenedor-slider {
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  align-content: center;
+  margin: auto;
 }
 #proyectos .contenedor-slider .carousel {
   background: #fff;
-  border: 2px solid black;
+  border: 2px solid white;
   box-shadow: black 8px 8px;
   width: 100%;
   max-width: 700px;
@@ -227,7 +230,6 @@ body {
 }
 #proyectos .contenedor-slider .carousel .slider {
   display: flex;
-  height: 100%;
   width: 300%;
   flex-shrink: 0;
   transition: all 0.5s;
@@ -240,15 +242,70 @@ body {
   align-items: center;
   font-size: 20px;
 }
+#proyectos .contenedor-slider .carousel .slider .slide div {
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+#proyectos .contenedor-slider .carousel .slider .slide div h2 {
+  background-color: white;
+  border: black 2px solid;
+  width: 200px;
+  margin: auto;
+  padding: 20px;
+  display: flex;
+  margin-top: 130px;
+  box-shadow: black 8px 8px;
+  background-color: white;
+}
+#proyectos .contenedor-slider .carousel .slider .slide div h2 a {
+  text-decoration: none;
+  font-size: 18px;
+  color: black;
+}
+#proyectos .contenedor-slider .carousel .slider .slide div h2 a:hover {
+  color: white;
+}
+#proyectos .contenedor-slider .carousel .slider .slide .a {
+  background-image: url(../img/web1.gif);
+}
+#proyectos .contenedor-slider .carousel .slider .slide .a h2:hover {
+  background-color: #6595fd;
+}
+#proyectos .contenedor-slider .carousel .slider .slide .b {
+  background-image: url(../img/web2.gif);
+}
+#proyectos .contenedor-slider .carousel .slider .slide .b h2:hover {
+  background-color: #d634ce;
+}
+#proyectos .contenedor-slider .carousel .slider .slide .c {
+  background-image: url(../img/web3.gif);
+}
+#proyectos .contenedor-slider .carousel .slider .slide .c h2:hover {
+  background-color: #e42484;
+}
 #proyectos .controls button {
   position: absolute;
   background: none;
   border: none;
   cursor: pointer;
   top: 150px;
+  background-color: black;
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
 }
 #proyectos .controls button i {
   font-size: 50px;
+  color: white;
+}
+#proyectos .controls button:hover {
+  background-color: white;
+}
+#proyectos .controls button:hover i {
+  color: black;
 }
 #proyectos .controls button.next {
   right: 10px;
@@ -274,7 +331,6 @@ body {
 }
 #contacto .redes {
   width: 100%;
-  height: 100%;
   margin: auto;
   display: flex;
   flex-wrap: wrap;
@@ -291,7 +347,7 @@ body {
   transition: 0.3s ease all;
   text-align: center;
   align-items: center;
-  margin: 10px auto;
+  margin: 20px auto;
   background-color: rgba(255, 255, 255, 0.4);
 }
 #contacto .redes div a {
@@ -382,17 +438,21 @@ body {
     margin-top: 130px;
     padding: 30px;
   }
-  #proyectos {
-    margin: 100px;
-  }
   #proyectos .contenedor-slider {
     width: 60%;
   }
   #proyectos .contenedor-slider .carousel {
     height: 400px;
   }
+  #proyectos .contenedor-slider .carousel .slider .slide div h2 {
+    margin-top: 155px;
+  }
   #proyectos .contenedor-slider button {
     top: 180px;
+  }
+  #proyectos .titulo {
+    margin-top: 110px;
+    margin-left: -200px;
   }
   #contacto .redes {
     margin-top: 150px;
