--- a/css/estilos.css
+++ b/css/estilos.css
@@ -169,6 +169,9 @@ body {
   display: block;
 }
 
+#sobremi {
+  width: 100%;
+}
 #sobremi .texto {
   width: 100%;
   font-size: 16px;
@@ -256,7 +259,7 @@ body {
   margin: auto;
   padding: 20px;
   display: flex;
-  margin-top: 130px;
+  margin-top: 30px;
   box-shadow: black 8px 8px;
   background-color: white;
 }
@@ -325,20 +328,20 @@ body {
 
 #contacto {
   width: 100%;
-  height: 100%;
   margin: auto;
-  margin-top: 30px;
 }
 #contacto .redes {
   width: 100%;
+  height: 300px;
   margin: auto;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  margin: 20px;
 }
 #contacto .redes div {
-  width: 130px;
-  height: 130px;
+  width: 120px;
+  height: 120px;
   display: flex;
   border-radius: 50%;
   text-decoration: none;
@@ -347,7 +350,7 @@ body {
   transition: 0.3s ease all;
   text-align: center;
   align-items: center;
-  margin: 20px auto;
+  margin: auto;
   background-color: rgba(255, 255, 255, 0.4);
 }
 #contacto .redes div a {
@@ -384,22 +387,25 @@ body {
 }
 #contacto .imagen {
   width: 100%;
-  height: 100%;
   display: flex;
   align-items: center;
-  margin: 30px auto;
-  margin-left: -50px;
+  margin: auto;
+  padding-top: 50px;
+  padding-right: 80px;
 }
 #contacto .imagen img {
   width: 70%;
   max-width: 400px;
   margin: auto;
+  border: 1px solid black;
+  border-radius: 50%;
+  box-shadow: black 8px 8px;
 }
 #contacto .imagen .titulo {
   width: 130px;
   height: 130px;
   margin: auto;
-  margin-top: 0px;
+  margin-top: -30px;
   margin-left: -100px;
 }
 #contacto .imagen .titulo h1 {
@@ -438,6 +444,9 @@ body {
     margin-top: 130px;
     padding: 30px;
   }
+  #proyectos {
+    padding-top: 50px;
+  }
   #proyectos .contenedor-slider {
     width: 60%;
   }
@@ -456,10 +465,14 @@ body {
   }
   #contacto .redes {
     margin-top: 150px;
-    width: 60%;
+    width: 50%;
+    display: flex;
+    margin: auto;
   }
   #contacto .imagen {
     width: 40%;
-    margin-top: 150px;
+    display: flex;
+    margin: auto;
+    padding: 0;
   }
 }/*# sourceMappingURL=estilos.css.map */
