--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -208,6 +208,7 @@ body {
 //------- Sobre Mi -------//
 
 #sobremi{
+    width: 100%;
 
     .texto{        
         width: 100%;        
@@ -311,7 +312,7 @@ body {
                             margin: auto;
                             padding: 20px;  
                             display: flex; 
-                            margin-top: 130px;
+                            margin-top: 30px;                            
                             box-shadow: black 8px 8px ;
                             background-color: $secundario;
                                                         
@@ -409,26 +410,22 @@ body {
 
 //------- Contacto -------//
 #contacto{
-    width: 100%;
-    height: 100%;    
+    width: 100%;       
     margin:auto;
-    margin-top: 30px;
-   
-
-
+    
         
     .redes{
-        width: 100%;        
-    
+        width: 100%; 
+        height: 300px;    
         margin: auto;
         display: flex;
         flex-wrap: wrap;
         align-items: center;
-                  
+        margin: 20px;                 
       
         div{         
-            width: 130px;
-            height: 130px;                 
+            width: 120px;
+            height: 120px;                 
             display: flex;          
             border-radius: 50%;
             text-decoration: none;             
@@ -438,7 +435,7 @@ body {
             transition: 0.3s ease all;
             text-align: center;
             align-items: center;
-            margin:20px auto;            
+            margin:auto;                     
             background-color: rgba(255, 255, 255, 0.4); 
 
             a {  
@@ -484,17 +481,20 @@ body {
 
     } 
     .imagen{
-        width: 100%;  
-        height: 100%;      
+        width: 100%;         
         display: flex;
         align-items: center;
-        margin: 30px auto; 
-        margin-left: -50px;      
+        margin: auto;  
+        padding-top: 50px; 
+        padding-right: 80px;          
 
         img{
             width: 70%;
             max-width: 400px;
-            margin: auto;                        
+            margin: auto;   
+            border: 1px solid black; 
+            border-radius: 50%;  
+            box-shadow: black 8px 8px ;                  
         }
 
         .titulo{
@@ -502,11 +502,9 @@ body {
             width:130px;   
             height: 130px; 
             margin: auto;
-            margin-top: 0px;
+            margin-top: -30px;
             margin-left: -100px;
-       
-            
-                    
+                          
             h1{   
                 padding-top: 35px;  
             }
@@ -561,7 +559,7 @@ body {
     }
 
     #proyectos{
-     
+        padding-top: 50px;     
         
         .contenedor-slider {   
             width: 60%;          
@@ -595,13 +593,16 @@ body {
     #contacto{
         .redes{
             margin-top:150px;
-            width: 60%;
+            width: 50%;
+            display: flex;
+            margin: auto;
         }
 
         .imagen{
-            width: 40%;
-            margin-top:150px;
-           
+            width: 40%;           
+            display: flex;
+            margin: auto;
+            padding: 0;
         }
     }
 
