--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -209,6 +209,7 @@ body {
 
 #sobremi{
     width: 100%;
+    height: 100%; 
 
     .texto{        
         width: 100%;        
@@ -412,6 +413,7 @@ body {
 #contacto{
     width: 100%;       
     margin:auto;
+   
     
         
     .redes{
@@ -484,9 +486,10 @@ body {
         width: 100%;         
         display: flex;
         align-items: center;
-        margin: auto;  
-        padding-top: 50px; 
-        padding-right: 80px;          
+        margin: auto;
+        
+        padding-right: 80px; 
+        padding-bottom: 30px;         
 
         img{
             width: 70%;
