--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -214,7 +214,7 @@ body {
     .texto{        
         width: 100%;        
         font-size: 16px;
-        bottom: 5px; 
+        margin-bottom: 5px; 
         padding:10px;
         background-color: $secundario;
         margin: 20px;
@@ -355,6 +355,8 @@ body {
                
             }           
         }
+
+        
     }
     
     .controls {
@@ -398,13 +400,31 @@ body {
           
         width:150px;   
         height: 150px; 
-        margin-top: 20px;
-        margin-left: 30px;                 
+        margin-top: 0px;                  
                 
         h1{   
             padding-top: 40px;  
         }
         
+    }
+
+    .mel1{
+        display: none;
+        width: 20%;
+        height: 300px;
+        margin: auto;
+        
+        
+    }
+
+    .mel2{
+        display: flex;
+        height: 100px;
+        width: 30%;
+        margin: auto;
+        margin-left: -60px;
+        margin-bottom: 0px;
+
     }
 
 }
@@ -590,6 +610,14 @@ body {
         .titulo{
             margin-top: 110px;
             margin-left: -200px;
+        }
+
+        .mel1{
+            display: flex;
+        }
+
+        .mel2{
+            display: none;
         }
     }
 
