--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,7 +11,7 @@ body {
   border: 2px solid black;
   box-shadow: black 8px 8px;
   align-content: center;
-  z-index: 5;
+  z-index: 3;
   position: relative;
 }
 .titulo h1 {
@@ -77,6 +77,7 @@ body {
   width: 100%;
   position: absolute;
   position: fixed;
+  z-index: 5;
 }
 .menu div {
   display: flex;
@@ -170,14 +171,15 @@ body {
 
 #sobremi {
   width: 100%;
+  height: 100%;
+  margin: 20px;
 }
 #sobremi .texto {
   width: 100%;
+  margin: auto;
   font-size: 16px;
-  margin-bottom: 5px;
   padding: 10px;
   background-color: white;
-  margin: 20px;
   margin-right: 85px;
   box-shadow: black 8px 8px;
   border: solid black 2px;
@@ -201,7 +203,6 @@ body {
 #sobremi .imagen .titulo {
   width: 120px;
   height: 120px;
-  margin-top: 20px;
   margin-bottom: -70px;
   margin-right: 40px;
 }
@@ -319,7 +320,7 @@ body {
   width: 150px;
   height: 150px;
   margin-top: 0px;
-  margin-left: -20px;
+  margin-left: -50px;
 }
 #proyectos .titulo h1 {
   padding-top: 40px;
@@ -341,11 +342,12 @@ body {
 
 #contacto {
   width: 100%;
+  height: 100%;
   margin: auto;
 }
 #contacto .redes {
   width: 100%;
-  height: 300px;
+  height: 250px;
   margin: auto;
   display: flex;
   flex-wrap: wrap;
@@ -418,8 +420,8 @@ body {
   width: 130px;
   height: 130px;
   margin: auto;
-  margin-top: -30px;
-  margin-left: -100px;
+  top: -30px;
+  left: -100px;
 }
 #contacto .imagen .titulo h1 {
   padding-top: 35px;
