--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -211,11 +211,11 @@ body {
 #sobremi{
     width: 100%;
     height: 100%; 
-    margin: 20px;
-
+    margin: auto;
+    
     .texto{        
         width: 100%;  
-        margin: auto;             
+        margin: 20px;            
         font-size: 16px;       
         padding:10px;
         background-color: $secundario;        
@@ -233,6 +233,7 @@ body {
         width: 100%;
         max-width: 600px;
         margin: auto; 
+        margin-top: 20px;      
          
         
         img{          
@@ -247,7 +248,7 @@ body {
           
             width:120px;   
             height: 120px;             
-            margin-bottom: -70px;            
+            margin-bottom: -80px;            
             margin-right: 40px;                
      
             h1{   
@@ -263,7 +264,7 @@ body {
 #proyectos{
    
     width: 100%;
-    height: 100%; 
+   
     flex-wrap: wrap;        
     
     .contenedor-slider {   
@@ -414,7 +415,7 @@ body {
         width: 20%;
         height: 300px;
         margin: auto;
-        
+        margin-bottom: 0px;
         
     }
 
@@ -506,14 +507,15 @@ body {
         width: 100%;         
         display: flex;
         align-items: center;
-        margin: auto;        
-        padding-right: 80px; 
-        padding-bottom: 30px;         
+        margin-left: 20px;
+        margin-top: -80px;
+            
 
         img{
             width: 70%;
             max-width: 400px;
-            margin: auto;   
+            display: flex;
+             
             border: 1px solid black; 
             border-radius: 50%;  
             box-shadow: black 8px 8px ;                  
@@ -524,10 +526,9 @@ body {
             width:130px;   
             height: 130px; 
             margin: auto;
-            top: -30px;
+            margin-top: -10px;
             left: -100px;
-
-                          
+                         
             h1{   
                 padding-top: 35px;  
             }
@@ -582,7 +583,7 @@ body {
     }
 
     #proyectos{
-        padding-top: 50px;     
+        padding-top: 20px;     
         
         .contenedor-slider {   
             width: 60%;          
