--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -10,7 +10,8 @@ $fuentePrincipal: 'Quicksand', sans-serif;
 body {
     font-family: $fuentePrincipal;
     margin:0px;
-    width: 100%;      
+    width: 100%;   
+    height: 100%;   
 }
 
 .titulo{
