--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,6 +3,7 @@ body {
   margin: 0px;
   width: 100%;
   height: 100%;
+  max-height: 100% !important;
 }
 
 .titulo {
@@ -24,7 +25,8 @@ body {
 
 .portafolio {
   height: 100%;
-  overflow-y: hidden;
+  max-height: 100% !important;
+  overflow-y: hidden !important;
   width: 100%;
   left: 0;
   right: 0;
@@ -173,7 +175,8 @@ body {
 
 #sobremi {
   width: 100%;
-  height: 100%;
+  max-height: 100% !important;
+  overflow-y: hidden;
   margin: auto;
 }
 #sobremi .texto {
