--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -11,7 +11,8 @@ body {
     font-family: $fuentePrincipal;
     margin:0px;
     width: 100%;   
-    height: 100%;   
+    height: 100%;  
+    max-height: 100% !important;  
 }
 
 .titulo{
@@ -49,7 +50,8 @@ body {
     }
     
     height: 100%;
-    overflow-y: hidden;
+    max-height: 100% !important; 
+    overflow-y: hidden !important;
     width: 100%;
     left: 0;
     right: 0;
@@ -212,7 +214,8 @@ body {
 
 #sobremi{
     width: 100%;
-    height: 100%; 
+    max-height: 100% !important; 
+    overflow-y: hidden;
     margin: auto;
     
     .texto{        
@@ -243,7 +246,8 @@ body {
             max-width: 600px;  
             margin: auto;  
             align-items: center; 
-            padding: 10px;   
+            padding: 10px;  
+
         }
 
         .titulo{
