--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -10,7 +10,9 @@ $fuentePrincipal: 'Quicksand', sans-serif;
 body {
     font-family: $fuentePrincipal;
     margin:0px;
-    width: 100%;   
+    width: 100%; 
+    background-color: black;
+    height: auto; 
    
 
 }
