--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,6 +2,8 @@ body {
   font-family: "Quicksand", sans-serif;
   margin: 0px;
   width: 100%;
+  background-color: black;
+  height: auto;
 }
 
 .titulo {
