--- a/css/estilos.css
+++ b/css/estilos.css
@@ -62,14 +62,16 @@ body {
 .portafolio .info, .portafolio .contenedor-info {
   display: flex;
   width: 100%;
+  height: 100%;
 }
 .portafolio .item {
   width: 100%;
   height: 100%;
+  max-height: 100% !important;
   z-index: -5;
   display: flex;
   flex-wrap: wrap;
-  background-color: black;
+  overflow-y: hidden;
 }
 
 .menu {
@@ -171,8 +173,6 @@ body {
 
 #sobremi {
   width: 100%;
-  max-height: 100% !important;
-  overflow-y: hidden;
   margin: auto;
 }
 #sobremi .texto {
