--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -67,16 +67,19 @@ body {
     .info, .contenedor-info{   
         display: flex;  
         width: 100%;
+        height: 100%;       
         
     }
 
     .item{      
         width: 100%; 
         height: 100%; 
+        max-height: 100% !important; 
         z-index: -5;  
         display: flex;  
         flex-wrap: wrap;  
-        background-color: black;      
+        overflow-y: hidden;
+         
     }
 }
 
@@ -210,9 +213,8 @@ body {
 //------- Sobre Mi -------//
 
 #sobremi{
-    width: 100%;
-    max-height: 100% !important; 
-    overflow-y: hidden;
+    width: 100%;    
+   
     margin: auto;
     
     .texto{        
