--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -11,6 +11,7 @@ body {
     font-family: $fuentePrincipal;
     margin:0px;
     width: 100%; 
+    margin: 0;
 }
 
 .titulo{
@@ -29,9 +30,7 @@ body {
         text-align: center;
         font-size: 20PX;     
     }
-    
 }
-
 
 .portafolio {
 
@@ -46,14 +45,12 @@ body {
             background-position: 0% 51%;
         }
     }
-    
- 
+     
     width: 100%;
     height: 100%;
     left: 0;
     right: 0;
     top: 0;
-    bottom: 0;
     position: absolute;
     background: linear-gradient(274deg, #7ec9e6, #7ce098, #fabf4d, #f18d52, #e95758, #f583b4, #cb88ef, #8669d6, #5381e8);
     background-size: 2000%, 2000%;
@@ -61,13 +58,13 @@ body {
     -moz-animation: animacionFondo 80s ease infinite;
     animation: animacionFondo 80s ease infinite;    
     display: flex;  
-    overflow: scroll;
+    flex-wrap: wrap;
+    margin: auto;
+    overflow-y: scroll;
 
     .info, .contenedor-info{   
         display: flex;  
-        width: 100%;
-          
-        
+        width: 100%;          
     }
 
     .item{      
@@ -75,7 +72,7 @@ body {
         height: 100%;         
         z-index: -5;  
         display: flex;  
-        flex-wrap: wrap;       
+        flex-wrap: wrap;   
          
     }
 }
@@ -210,22 +207,21 @@ body {
 //------- Sobre Mi -------//
 
 #sobremi{
-    width: 100%; 
-    height: 100%;   
-    margin: auto;
+    width: 100%;
+  
+   
+    flex-wrap: wrap;  
     
     .texto{        
         width: 100%;  
-        margin-left: 10px;         
+        margin: 20px;           
         font-size: 16px;       
         padding:10px;
         background-color: $secundario;        
         margin-right: 85px;        
         box-shadow: black 8px 8px;
         border: solid black 2px; 
-        margin-top: 0px;
-         
-           
+        margin-top: 0px;           
 
         strong{
             font-size: 20px;
@@ -236,16 +232,16 @@ body {
     .imagen{
         width: 100%;
         max-width: 600px;
-        margin: auto; 
-        margin-top: 20px;      
+        margin: 10px;
+          
          
         
         img{          
-            width: 90%; 
+            width: 80%; 
             max-width: 600px;  
-            margin: auto;  
+        
             align-items: center; 
-            padding: 10px;  
+          
 
         }
 
@@ -253,7 +249,7 @@ body {
           
             width:120px;   
             height: 120px;             
-            margin-bottom: -80px;            
+            margin-bottom: -90px;            
             margin-right: 40px;                
      
             h1{   
@@ -560,10 +556,12 @@ body {
         margin: auto;
         .imagen{
             width: 35%;
+            margin: auto;
 
             img{
                 width: 100%;             
-                margin: 30px;
+                
+
             } 
             
             .titulo{
