--- a/css/estilos.css
+++ b/css/estilos.css
@@ -25,7 +25,7 @@ body {
 
 .portafolio {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   left: 0;
   right: 0;
   top: 0;
@@ -172,7 +172,8 @@ body {
 
 #sobremi {
   width: 100%;
-  flex-wrap: wrap;
+  height: 100%;
+  align-content: center;
 }
 #sobremi .texto {
   width: 100%;
@@ -183,7 +184,6 @@ body {
   margin-right: 85px;
   box-shadow: black 8px 8px;
   border: solid black 2px;
-  margin-top: 0px;
 }
 #sobremi .texto strong {
   font-size: 20px;
@@ -192,18 +192,23 @@ body {
 #sobremi .imagen {
   width: 100%;
   max-width: 600px;
-  margin: 10px;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-top: 10px;
 }
 #sobremi .imagen img {
   width: 80%;
   max-width: 600px;
-  align-items: center;
+  margin: auto;
 }
 #sobremi .imagen .titulo {
   width: 120px;
   height: 120px;
-  margin-bottom: -90px;
-  margin-right: 40px;
+  margin: auto;
+  margin-right: 20px;
+  margin-bottom: -60px;
 }
 #sobremi .imagen .titulo h1 {
   padding-top: 15px;
@@ -454,7 +459,6 @@ body {
   #sobremi .texto {
     width: 40%;
     margin: auto;
-    margin-top: 130px;
     padding: 30px;
   }
   #proyectos {
