--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -48,7 +48,7 @@ body {
     }
      
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     left: 0;
     right: 0;
     top: 0;
@@ -209,20 +209,20 @@ body {
 
 #sobremi{
     width: 100%;
-  
-   
-    flex-wrap: wrap;  
-    
-    .texto{        
+    height: 100%;
+    align-content: center;
+
+    .texto{  
+       
         width: 100%;  
-        margin: 20px;           
+        margin: 20px;     
+          
         font-size: 16px;       
         padding:10px;
         background-color: $secundario;        
         margin-right: 85px;        
         box-shadow: black 8px 8px;
-        border: solid black 2px; 
-        margin-top: 0px;           
+        border: solid black 2px;               
 
         strong{
             font-size: 20px;
@@ -233,26 +233,27 @@ body {
     .imagen{
         width: 100%;
         max-width: 600px;
-        margin: 10px;
-          
+        margin: auto;  
+        display: flex;   
+        flex-wrap: wrap; 
+        align-items: center; 
+        margin-top: 10px;  
          
-        
         img{          
             width: 80%; 
             max-width: 600px;  
-        
-            align-items: center; 
-          
-
+            margin: auto;      
+             
         }
 
         .titulo{
           
             width:120px;   
-            height: 120px;             
-            margin-bottom: -90px;            
-            margin-right: 40px;                
-     
+            height: 120px;  
+            margin: auto; 
+            margin-right: 20px;
+            margin-bottom: -60px; 
+                            
             h1{   
                 padding-top: 15px;  
             }
@@ -581,7 +582,7 @@ body {
         .texto{
             width: 40%;
             margin: auto;
-            margin-top: 130px;            
+                 
             padding: 30px;
         }
     }
