--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -15,6 +15,8 @@ body {
     margin: 0;
 }
 
+
+
 .titulo{
     background-color: $secundario;
     border-radius:50% ;       
@@ -32,6 +34,19 @@ body {
         font-size: 20PX;     
     }
 }
+
+.texto{  
+       
+    width: 100%; 
+    font-size: 16px;       
+    padding:10px;
+    background-color: $secundario;  
+    box-shadow: black 8px 8px;
+    border: solid black 2px;
+    
+}            
+
+
 
 .portafolio {
 
@@ -61,7 +76,7 @@ body {
     display: flex;  
     flex-wrap: wrap;
     margin: auto;
-    overflow-y: scroll;
+    
 
     .info, .contenedor-info{   
         display: flex;  
@@ -211,18 +226,12 @@ body {
     width: 100%;
     height: 100%;
     align-content: center;
+   
 
-    .texto{  
-       
-        width: 100%;  
-        margin: 20px;     
-          
-        font-size: 16px;       
-        padding:10px;
-        background-color: $secundario;        
-        margin-right: 85px;        
-        box-shadow: black 8px 8px;
-        border: solid black 2px;               
+    .texto{        
+         
+        margin: 20px;             
+        margin-right: 85px;                 
 
         strong{
             font-size: 20px;
@@ -439,6 +448,10 @@ body {
     width: 100%; 
     height: 100%;      
     margin:auto;
+
+
+
+
             
     .redes{
         width: 100%; 
@@ -447,9 +460,18 @@ body {
         display: flex;
         flex-wrap: wrap;
         align-items: center;
-        margin: 20px;                 
+        margin: 20px;       
+        
+        .texto2{
+            width: 100%;
+            margin: auto;
+            font-size: 20px;
+            font-weight: 700;
+            color: $principal;
+            text-align: center;
+        }
       
-        div{         
+        .red{         
             width: 120px;
             height: 120px;                 
             display: flex;          
@@ -480,7 +502,7 @@ body {
 
         }
 
-        div:before {
+        .red:before {
             -webkit-transition: 0.5s all ease;
             transition: 0.5s all ease;
             position: absolute;
@@ -495,7 +517,7 @@ body {
             border-radius: 50%;        
         }
 
-        div:hover:before {
+        .red:hover:before {
             -webkit-transition: 0.5s all ease;
             transition: 0.5s all ease;
             left: 0%;
