--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -362,6 +362,13 @@ body {
                             background-color:#e42484;                            
                         }
                     }
+
+                    .d{
+                        background-image: url(../img/web4.gif) ;                        
+                        h2:hover{
+                            background-color:#76dba8;                            
+                        }
+                    }
                 }
       
 
