--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -454,12 +454,7 @@ body {
 #contacto{
     width: 100%; 
     height: 100%;      
-    margin:auto;
-
-
-
-
-            
+    margin:auto;            
     .redes{
         width: 100%; 
         height: 250px;    
@@ -490,7 +485,7 @@ body {
             transition: 0.3s ease all;
             text-align: center;
             align-items: center;
-            margin:auto;                     
+            margin:10px auto;                     
             background-color: rgba(255, 255, 255, 0.4); 
 
             a {  
