--- a/css/estilos.css
+++ b/css/estilos.css
@@ -385,7 +385,7 @@ body {
   transition: 0.3s ease all;
   text-align: center;
   align-items: center;
-  margin: auto;
+  margin: 10px auto;
   background-color: rgba(255, 255, 255, 0.4);
 }
 #contacto .redes .red a {
